Fix contact form alignment

--- a/pages/contato/index.module.css
+++ b/pages/contato/index.module.css
@@ -14,8 +14,11 @@
   height: 100%;
 }
 
-.formContainer {
+.container main div {
   padding: 1em;
+}
+
+.formContainer {
   margin-bottom: 2em;
   width: 100%;
 }
